change of dynamics
Signed-off-by: silvio <msilvio_12@outlook.com>

--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="D:\Descargas\Programacion\TRABAJO\JAVASCRIPT\API RESTCOUNTRIES\RESTCOUNTRIES\asset\planetaicon.ico">
   <title>PAISES DEL MUNDO</title>
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
   <header>
     <h1>Países</h1>
     <input type="text" id="searchInput" placeholder="BUSCAR PAIS...">
+
   </header>
+
   <main>
-    <ul id="countryList"></ul>
+
+  <ul id="countryList"></ul>
   </main>
+  <div id="countryInfo"></div>
+
+
+
 
 
   <script src="main.js"></script>
-
-
+  <img src="D:\Descargas\Programacion\TRABAJO\JAVASCRIPT\API RESTCOUNTRIES\RESTCOUNTRIES\asset\mundofoto.jpg" alt="">
 </body>
+
 </html>
